stream blocks while add to track